<resources>
    <string name="app_name">Booking Hotel</string>

    <string name="hotel">Отель</string>
    <string name="about_hotel">Об отеле</string>

    <string name="rating_value_with_description">%1$s %2$s</string>
    <string name="min_price_with_symbol">от %1$s ₽</string>
    <string name="price_with_symbol">%1$s ₽</string>

    <string name="facilities">Удобства</string>
    <string name="what_is_included">Что включено</string>
    <string name="what_is_not_included">Что не включено</string>
    <string name="most_needed">Самое необходимое</string>

    <string name="number_selection">К выбору номера</string>

    <string name="about_number">Подробнее о номере</string>
    <string name="select_number">Выбрать номер</string>

    <string name="error_image_loading_description">Не удалось отобразить изображение</string>

    <string name="booking">Бронирование</string>

    <string name="departure">Вылет из</string>
    <string name="arrival_with_country">Страна, город</string>
    <string name="dates">Даты</string>
    <string name="dates_sample">%1$s - %2$s</string>
    <string name="number_nights">Кол-во ночей</string>
    <string name="name_hotel_tv">Отель</string>
    <string name="number_hotel">Номер</string>
    <string name="nutrition">Питание</string>

    <string name="buyer_info">Информация о покупателе</string>
    <string name="buyer_info_warning">Эти данные никому не передаются. После оплаты мы вышли чек на указанный вами номер и почту</string>
    <string name="phone_number">Номер телефона</string>
    <string name="phone_number_hint">**********</string>
    <string name="email">Почта</string>

    <string name="first_name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="birthdate">Дата рождения</string>
    <string name="citizenship">Гражданство</string>
    <string name="number_international_passport">Номер загранпаспорта</string>
    <string name="validity_period_international_passport">Срок действия загранпаспорта</string>

    <string name="ordinals_sample">%1$s турист</string>
    <string name="add_tourist">Добавить туриста</string>

    <string name="pay_booking_sample">Оплатить %1$s ₽</string>

    <string name="order_paid">Заказ оплачен</string>
    <string name="success_paid_title">Ваш заказ принят в работу</string>
    <string name="success_paid_description">Подтверждение заказа №%1$s может занять некоторое время (от 1 часа до суток). Как только мы получим ответ от туроператора, вам на почту придет уведомление.</string>
    <string name="ok">Супер!</string>

    <string-array name="ordinals">
        <item>первый</item>
        <item>второй</item>
        <item>третий</item>
        <item>четвёртый</item>
        <item>пятый</item>
        <item>шестой</item>
        <item>седьмой</item>
        <item>восьмой</item>
        <item>девятый</item>
        <item>десятый</item>
    </string-array>

    <string name="update">Обновить</string>
    <string name="network_problem">Ошибка сети</string>
    <string name="error_network_problem_description">Пожалуйста, проверьте подключение\nи
        повторите попытку.</string>
    <string name="something_went_wrong">Ошибка</string>
    <string name="error_something_went_wrong_description">Возникла проблема.\nПовторите попытку
        позже.\nЕсли проблема не исчезнет,\nсвяжитесь с техподдержкой.</string>

</resources>