<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        style="@style/Theme.BookingHotel.AppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                style="@style/Theme.BookingHotel.MaterialToolbar"
                app:title="@string/hotel" />

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/loading_progress"
                style="@style/Theme.BookingHotel.MaterialToolbar.LinearProgressIndicator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:visibility="gone" />

        </FrameLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/main_info_card"
                style="@style/Theme.BookingHotel.CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-16dp"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp">

                    <androidx.viewpager2.widget.ViewPager2
                        android:id="@+id/image_list_vp"
                        android:layout_width="match_parent"
                        android:layout_height="257dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:id="@+id/image_dots"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/dots_bg"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toBottomOf="@id/image_list_vp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <org.bessonov.bookinghotel.view.MainInfoHotelItemView
                        android:id="@+id/main_info_hotel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@id/image_list_vp" />

                    <TextView
                        android:id="@+id/min_price_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/sf_pro_display_semibold"
                        android:textSize="30sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/main_info_hotel"
                        tools:text="от 134 673 ₽" />

                    <TextView
                        android:id="@+id/description_price_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:textColor="#828796"
                        android:textSize="16sp"
                        app:layout_constraintBaseline_toBaselineOf="@id/min_price_tv"
                        app:layout_constraintStart_toEndOf="@id/min_price_tv"
                        tools:text="за тур с перелётом" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/additional_info_card"
                style="@style/Theme.BookingHotel.CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/main_info_card">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp">

                    <TextView
                        android:id="@+id/additional_info_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sf_pro_display_medium"
                        android:text="@string/about_hotel"
                        android:textSize="22sp"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/peculiarity_list_rv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:nestedScrollingEnabled="false"
                        android:orientation="horizontal"
                        android:overScrollMode="never"
                        app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
                        app:layout_constraintTop_toBottomOf="@id/additional_info_tv"
                        tools:listitem="@layout/peculiarity_item" />

                    <TextView
                        android:id="@+id/description_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:textColor="#E6000000"
                        android:textSize="16sp"
                        app:layout_constraintTop_toBottomOf="@id/peculiarity_list_rv"
                        tools:text="Отель VIP-класса с собственными гольф полями. Высокий уровнь сервиса. Рекомендуем для респектабельного отдыха. Отель принимает гостей от 18 лет!" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/detail_card"
                        style="@style/Theme.BookingHotel.CardView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="16dp"
                        app:cardBackgroundColor="#FBFBFC"
                        app:layout_constraintTop_toBottomOf="@id/description_tv">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="15dp"
                            android:orientation="vertical">

                            <org.bessonov.bookinghotel.view.DetailAdditionalInfoItemView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:icon="@drawable/emoji_happy"
                                app:title="@string/facilities" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_marginStart="38dp"
                                android:layout_marginTop="10dp"
                                android:background="#26828796" />

                            <org.bessonov.bookinghotel.view.DetailAdditionalInfoItemView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                app:icon="@drawable/tick_square"
                                app:title="@string/what_is_included" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_marginStart="38dp"
                                android:layout_marginTop="10dp"
                                android:background="#26828796" />

                            <org.bessonov.bookinghotel.view.DetailAdditionalInfoItemView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                app:icon="@drawable/close_square"
                                app:title="@string/what_is_not_included" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="84dp"
                app:layout_constraintTop_toBottomOf="@id/additional_info_card" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <View
        android:id="@+id/button_container"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_gravity="bottom"
        android:background="@drawable/button_container"
        android:visibility="gone" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/number_selection_btn"
        style="@style/Theme.BookingHotel.MainActionButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="bottom"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:text="@string/number_selection"
        android:visibility="gone" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>